// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SemanticSearchResults should only display items that match filters 1`] = `
<div
  className="row panels-layout"
>
  <React.Fragment>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
      title="query - Semantic search results"
    />
    <main
      className="semantic-search-results-viewer document-viewer with-panel"
    >
      <h3>
        <Connect(Translate)>
          Semantic search
        </Connect(Translate)>
        : 
        query
      </h3>
      <div
        className="documents-counter"
      >
        <span
          className="documents-counter-label"
        >
          <b>
            1
          </b>
           
          <Connect(Translate)>
            documents
          </Connect(Translate)>
        </span>
      </div>
      <RowList
        zoomLevel={0}
      >
        <Connect(Doc)
          additionalText={
            <div
              className="item-metadata"
            >
              <div
                className="metadata-type-text"
              >
                <div>
                  <Connect(Translate)>
                    Sentences above threshold
                  </Connect(Translate)>
                </div>
                <div>
                  2
                   out of 
                  3
                   (
                  66.67
                  %)
                </div>
              </div>
            </div>
          }
          doc={
            Immutable.Map {
              "semanticSearch": Immutable.Map {
                "averageScore": 0.4,
                "results": Immutable.List [
                  Immutable.Map {
                    "score": 0.6,
                  },
                  Immutable.Map {
                    "score": 0.5,
                  },
                  Immutable.Map {
                    "score": 0.2,
                  },
                ],
              },
            }
          }
          key="0"
          onClick={[Function]}
        />
      </RowList>
    </main>
    <Connect(ResultsSidePanel) />
  </React.Fragment>
</div>
`;

exports[`SemanticSearchResults should render results in ItemList 1`] = `
<div
  className="row panels-layout"
>
  <React.Fragment>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
      title="query - Semantic search results"
    />
    <main
      className="semantic-search-results-viewer document-viewer with-panel"
    >
      <h3>
        <Connect(Translate)>
          Semantic search
        </Connect(Translate)>
        : 
        query
      </h3>
      <div
        className="documents-counter"
      >
        <span
          className="documents-counter-label"
        >
          <b>
            2
          </b>
           
          <Connect(Translate)>
            documents
          </Connect(Translate)>
        </span>
      </div>
      <RowList
        zoomLevel={0}
      >
        <Connect(Doc)
          additionalText={
            <div
              className="item-metadata"
            >
              <div
                className="metadata-type-text"
              >
                <div>
                  <Connect(Translate)>
                    Sentences above threshold
                  </Connect(Translate)>
                </div>
                <div>
                  2
                   out of 
                  3
                   (
                  66.67
                  %)
                </div>
              </div>
            </div>
          }
          doc={
            Immutable.Map {
              "semanticSearch": Immutable.Map {
                "averageScore": 0.4,
                "results": Immutable.List [
                  Immutable.Map {
                    "score": 0.6,
                  },
                  Immutable.Map {
                    "score": 0.5,
                  },
                  Immutable.Map {
                    "score": 0.2,
                  },
                ],
              },
            }
          }
          key="0"
          onClick={[Function]}
        />
        <Connect(Doc)
          additionalText={
            <div
              className="item-metadata"
            >
              <div
                className="metadata-type-text"
              >
                <div>
                  <Connect(Translate)>
                    Sentences above threshold
                  </Connect(Translate)>
                </div>
                <div>
                  1
                   out of 
                  3
                   (
                  33.33
                  %)
                </div>
              </div>
            </div>
          }
          doc={
            Immutable.Map {
              "semanticSearch": Immutable.Map {
                "averageScore": 0.6,
                "results": Immutable.List [
                  Immutable.Map {
                    "score": 0.7,
                  },
                  Immutable.Map {
                    "score": 0.2,
                  },
                  Immutable.Map {
                    "score": 0.1,
                  },
                ],
              },
            }
          }
          key="1"
          onClick={[Function]}
        />
      </RowList>
    </main>
    <Connect(ResultsSidePanel) />
  </React.Fragment>
</div>
`;

exports[`SemanticSearchResults when the search is empty should render not found page 1`] = `
<div
  className="row panels-layout"
>
  <React.Fragment>
    <HelmetWrapper
      defer={true}
      encodeSpecialCharacters={true}
      title=" - Semantic search results"
    />
    <main
      className="semantic-search-results-viewer document-viewer with-panel"
    >
      <h3>
        <Connect(Translate)>
          Semantic search
        </Connect(Translate)>
        : 
      </h3>
      <div
        className="documents-counter"
      >
        <span
          className="documents-counter-label"
        >
          <b>
            0
          </b>
           
          <Connect(Translate)>
            documents
          </Connect(Translate)>
        </span>
      </div>
      <RowList
        zoomLevel={0}
      />
    </main>
    <Connect(ResultsSidePanel) />
  </React.Fragment>
</div>
`;
